# Recycler

./: .gitignore  CMakeLists.txt  README.md  Recycler.cpp  Recycler.h  Reusable.cpp  Reusable.h
include/: Recycler.h  Reusable.h
lib/x32/: Recycler.lib
lib/x64/: Recycler.lib
